Trailhead Tracker/src/objects/Trailhead_Badge__c.object
<CustomObject>
    <description>This object stores the details of all the badges the team members have achieved. This allows users to see which users have achieved a particular badge, in case they need help for that.</description>
    <fields>
        <fullName>Badge_Type__c</fullName>
        <description>This field stores the type of the Trailhead badge – Module, Project, Superbadge, Event etc.</description>
        <label>Badge Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <description>This field stores the Trailhead Image url of the badge</description>
        <label>Icon URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field stores the title of the Trailhead badge.</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Achievers__c</fullName>
        <description>This field stores the total number of team members who have achieved the badge.</description>
        <label>Total Achievers</label>
        <summaryForeignKey>Badge_Achieved__c.Trailhead_Badge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>This field stores the Trailhead link to the badge.</description>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Trailhead Badge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Achievers__c</columns>
        <columns>Title__c</columns>
        <columns>Badge_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Icon_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>